8265127: ZGC: Fix incorrect reporting of reclaimed memory